@@ -836,7 +836,7 @@ img.math {
     vertical-align: middle;
 }
 
-div.math {
+div.math p {
     text-align: center;
 }
 
