@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 {% set title = _('Overview') %}
 {% block body %}
-  <h1>{{ docstitle }}</h1>
+  <h1>{{ docstitle|e }}</h1>
   <p>
     Welcome! This is
-    {% block description %}the documentation for {{ project }}
-    {{ release }}{% if last_updated %}, last updated {{ last_updated }}{% endif %}{% endblock %}.
+    {% block description %}the documentation for {{ project|e }}
+    {{ release|e }}{% if last_updated %}, last updated {{ last_updated|e }}{% endif %}{% endblock %}.
   </p>
   {% block tables %}
   <p><strong>{{ _('Indices and tables:') }}</strong></p>
