@@ -161,6 +161,12 @@ New features added
 Bugs fixed
 ----------
 
+* Escape configuration values placed in HTML templates.
+
+* Fix small problems in HTML help index generation.
+
+* Fix LaTeX output for line blocks in tables.
+
 * Fix "illegal unit" error when using pixel image widths/heights.
 
 * Support table captions in LaTeX output.
